@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.70.00
 
+              Add yuy2topam.  Thanks Michael Haardt.
+
 14.12.25 BJH  Release 10.69.00
 
               pnmnorm: add -bsingle, -wsingle.
